@@ -44,6 +44,26 @@ namespace AjTalk.Tests
         }
 
         [TestMethod]
+        public void CreateIndexedClass()
+        {
+            Machine machine = new Machine();
+            IClass cls = machine.CreateClass("TestClass", true);
+
+            Assert.IsNotNull(cls);
+            Assert.AreEqual("TestClass", cls.Name);
+            Assert.AreEqual(-1, cls.GetInstanceVariableOffset("x"));
+            Assert.IsNull(cls.GetInstanceMethod("x"));
+            Assert.IsNotNull(cls.SuperClass);
+            Assert.IsInstanceOfType(cls.SuperClass, typeof(IClass));
+            Assert.AreEqual("nil", ((IClass)cls.SuperClass).Name);
+
+            object obj = cls.NewObject();
+
+            Assert.IsNotNull(obj);
+            Assert.IsInstanceOfType(obj, typeof(IIndexedObject));
+        }
+
+        [TestMethod]
         public void SetGlobalVariable()
         {
             Machine machine = new Machine();
