@@ -81,10 +81,14 @@ bytecode .Send manage native object or IObject
 
 2010-08-12
 subclass:nativeType: support in test, DoesNotUnderstand
-new example NativeBahevior.st
+new example test NativeBahevior.st
 IMetaClass
 BaseMetaClass
 BaseBehaviorTests
+new example test NativeFileInfo.st
+BaseIndexedObjectTests
+BehabiorDoesNotUnderstandMethod
+.Superclass as IBehavior
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
